# harness_x

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  README.md  __main__.py  harness_bootstrap.py  harness_constants.py  harness_logging.py  harness_state.py  harness_time.py  model_tools.py  pyproject.toml  run_agent.py  toolsets.py  web_chat.py
.understand-anything/: .understandignore  knowledge-graph.json  meta.json
agent/: account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  background_review.py  bedrock_adapter.py  browser_provider.py  browser_registry.py  chat_completion_helpers.py  context_compressor.py  context_references.py  conversation_compression.py  conversation_loop.py  credential_persistence.py  credential_pool.py  credential_sources.py  credits_tracker.py  curator.py  curator_backup.py  display.py  file_safety.py  google_oauth.py  i18n.py  insights.py  memory_manager.py  model_metadata.py  models_dev.py  nous_rate_guard.py  plugin_llm.py  portal_tags.py  prompt_builder.py  provider_registry.py  shell_hooks.py  skill_bundles.py  skill_commands.py  skill_preprocessing.py  skill_utils.py  system_prompt.py  tool_executor.py  (+4 more)
gateway/: __init__.py  platform_registry.py  session_context.py  status.py
harness_cli/: __init__.py  _parser.py  auth.py  build_info.py  colors.py  config.py  default_soul.py  env_loader.py  hooks.py  middleware.py  models.py  nous_account.py  plugins.py  profiles.py  runtime_provider.py  timeouts.py
providers/: __init__.py  base.py
tools/: __init__.py  approval.py  checkpoint_manager.py  file_tools.py  (+20 more)
(+35 files in other folders)
