# harness_x — extracted core agent framework from hermes-agent
# Stripped of messaging gateway, plugins, skills, tools, and frontends.

[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-x"
version = "0.1.0"
description = "Core AI agent framework — conversation loop, LLM adapters, tool dispatch, subagent delegation"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"

dependencies = [
    # Core LLM SDK
    "openai==2.24.0",
    # Environment / config
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "ruamel.yaml==0.18.17",
    # HTTP (used by adapters and tools)
    "httpx[socks]==0.28.1",
    "requests==2.33.0",
    "urllib3>=2.7.0,<3",
    # CLI input
    "prompt_toolkit==3.0.52",
    # Validation / schema
    "pydantic==2.13.4",
    # Image resize (vision path)
    "Pillow==12.2.0",
    # Process management
    "psutil==7.2.2",
    # Packaging version checks
    "packaging==26.0",
    # PTY support (Unix)
    "ptyprocess>=0.7.0,<1; sys_platform != 'win32'",
    # Timezone data (Windows)
    "tzdata==2025.3; sys_platform == 'win32'",
]

[project.optional-dependencies]
# LLM providers (install as needed)
anthropic = ["anthropic==0.87.0"]
# Development
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-timeout==2.4.0",
    "ruff==0.15.10",
]

[tool.setuptools.packages.find]
include = ["agent*", "tools*", "harness_cli*", "gateway*", "plugins*", "providers*"]
